# tequipy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: seed_data.py
backend/scripts/fixtures/: __init__.py  users.json
backend/src/api/: app.py  schemas.py
backend/src/api/middleware/: __init__.py  metrics.py  rate_limit.py  request_logging.py  security_headers.py
backend/src/api/v1/: agents.py  audit.py  auth.py  health.py  weather.py
backend/src/core/: config.py  logging.py  metrics.py
backend/src/domain/: __init__.py  entities.py  exceptions.py  repositories.py  value_objects.py
backend/src/domain/services/: __init__.py  agent_service.py  auth_service.py  metrics_provider.py  weather_service.py
backend/src/infrastructure/: dependencies.py
backend/src/infrastructure/agents/: providers.py
backend/src/infrastructure/auth/: __init__.py  dependencies.py  jwt_provider.py  password.py  rate_limiter.py
backend/src/infrastructure/database/: __init__.py  models.py  session.py
backend/src/infrastructure/metrics/: __init__.py  prometheus_provider.py
backend/src/infrastructure/repositories/: __init__.py  audit_repository.py  refresh_token_repository.py  user_repository.py
backend/src/infrastructure/weather/: __init__.py  cache.py  client.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/test_api/: test_health.py
backend/tests/test_weather/: __init__.py  test_weather_api.py  test_weather_cache.py  test_weather_client.py  test_weather_service.py
frontend/: .dockerignore  (+7 more)
(+60 files in other folders)
