[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tequipy"
version = "0.1.0"
description = "Minimal API-only backend with Weather API, Agents, Health/Metrics endpoints"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core framework
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    # Caching
    "redis>=7.1.0",
    # Monitoring and Observability
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    # HTTP Client
    "httpx[http2]>=0.27.0",
    # Caching
    "cachetools>=5.5.0",
    # Retry logic
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=5.13.2",
    "mypy>=1.12.1",
    "pre-commit>=4.0.1",
    "types-redis>=4.6.0.20241004",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Imported but unused

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
combine_as_imports = true

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
